<resources>
    <string name="app_name">MJC</string>
    <string name="text_consumer">Consumer</string>
    <string name="text_engineer">Engineer</string>
    <string name="text_profile">Profile</string>
    <string name="text_home">Home</string>
    <string name="text_request">Requests</string>
    <string name="text_email">Email</string>
    <string name="text_password">Passwod</string>
    <string name="text_login">Login</string>
    <string name="text_signup_nav_text">New here?</string>
    <string name="text_register">Register</string>
    <string name="text_name">Name</string>
    <string name="text_phone">Phone</string>
    <string name="text_signup">Signup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_house">House</string>
    <string name="text_add_requirement">Add your requirements here</string>
    <string name="text_upload_plan">Upload Plan</string>
    <string name="text_add_measurement">Add Measurement</string>
    <string name="text_total_area">Total Area (Cents)</string>
    <string name="text_building_area">Building Area (Sq.Ft)</string>
    <string name="text_continue">Continue</string>
    <string name="text_add_file">Add File</string>
    <string name="text_proessing">Processing</string>
    <string name="text_work_completed">Works completed</string>
    <string name="text_select_engineer_to_proceed">Select engineer to proceed</string>
    <string name="text_payment">Payment</string>
    <string name="text_works_completed">Works completed</string>
    <string name="text_about_me">About me</string>
    <string name="text_placeholder_long">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumhas been the industry's standard "</string>
    <string name="text_hire_me">Hire Me</string>
    <string name="text_review_your_req">Review your requirements</string>
    <string name="text_uploaded_plan">Uploaded plan</string>
    <string name="text_total_area_title">Total Area</string>
    <string name="text_building_area_title">Building Area</string>
    <string name="text_send_req">Send Request</string>
    <string name="text_selected_engineer">Selected Engineer</string>
    <string name="text_see_and_add_your_work">See and add your work</string>
    <string name="text_address">Address</string>
    <string name="text_place">Place</string>
    <string name="text_district">District</string>
    <string name="text_state">State</string>
    <string name="text_save">Save</string>
    <string name="text_upload_id_proof">Upload ID Proof</string>
    <string name="text_id_proof">Identity proof</string>
    <string name="text_edit">Edit</string>
    <string name="text_fees">Fees</string>
    <string name="text_you_can_see_and_add_works_here">You can see and add works here</string>
    <string name="text_add_work">Add works</string>
    <string name="text_view_work">Add your wors here</string>
    <string name="text_work_name">Work Name</string>
    <string name="text_owner_name">Owner Name</string>
    <string name="text_add_work_photo">Add photos of your works</string>
    <string name="text_date_of_completion">Date of completion</string>
    <string name="text_description">Description</string>
</resources>