<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".consumer.workrequest.CreateRequestActivity">

    <include
        android:id="@+id/toolbar_createRequest"
        layout="@layout/main_toolbar"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:text="@string/text_review_your_req"
                android:textColor="@color/mjc_grey">

            </TextView>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_size_16"
                android:text="@string/text_uploaded_plan"
                android:textColor="@color/mjc_grey"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frame_req_file_list"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="20dp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:orientation="vertical">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/text_size_16"
                    android:text="@string/text_total_area_title"
                    android:textColor="@color/mjc_grey"/>
                <EditText
                    android:id="@+id/etReqTotalArea"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_text_field_default"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/field_bg_blue"
                    android:gravity="center_vertical"
                    android:hint="@string/text_total_area"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/padding_text_view"
                    android:textSize="@dimen/text_size_18"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/text_size_16"
                    android:text="@string/text_building_area_title"
                    android:textColor="@color/mjc_grey"/>
                <EditText
                    android:id="@+id/etReqBuildingArea"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_text_field_default"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/field_bg_blue"
                    android:gravity="center_vertical"
                    android:hint="@string/text_building_area"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/padding_text_view"
                    android:textSize="@dimen/text_size_18"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/text_size_16"
                    android:text="@string/text_selected_engineer"
                    android:textColor="@color/mjc_grey"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/ivProfileImageRequest"
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/field_bg_grey"
                        android:src="@drawable/ic_engineer"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_14"
                            android:textColor="@color/black"
                            android:id="@+id/tvSelectedEngname"
                            tools:text="Chithlal K"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_14"
                            android:textColor="@color/black"
                            android:id="@+id/tvSelectedEngOcupation"
                            tools:text="Software engineer"
                            />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/btSendRequest"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_button_default"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_bg_blue"
                    android:textColor="@color/white"
                    android:text="@string/text_send_req"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>