<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <EditText
        android:id="@+id/tvLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_text_field_default"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:hint="@string/text_email"
        android:padding="@dimen/padding_text_view"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/field_bg_blue"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_text_field_default"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/field_bg_blue"
        android:gravity="center_vertical"
        android:hint="@string/text_password"
        android:padding="@dimen/padding_text_view"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginEmail" />

    <TextView
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_default"
        android:layout_marginStart="88dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="88dp"
        android:background="@drawable/button_bg_blue"
        android:textColor="@color/white"
        android:text="@string/text_login"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginPassword" />

    <ProgressBar
        android:id="@+id/progressLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:visibility="gone"
        android:progressTint="@color/mjc_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin"
        app:layout_constraintVertical_bias="0.086">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_signup_nav_text"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tvNavSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/text_register"
            android:textColor="@color/mjc_green"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>