<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    tools:context=".engineer.works.AddWorkActivity">
<include layout="@layout/main_toolbar" android:id="@+id/toolbar_add_work"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_work"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_work_name"
            android:textColor="@color/mjc_grey"
            android:textSize="@dimen/text_size_14"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etAddWorkName"
            android:textColor="@color/mjc_grey"
            android:textSize="@dimen/text_size_18"
            tools:text="Kovoor"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:background="@drawable/field_bg_blue"
            android:gravity="center_vertical"
            android:padding="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_owner_name"
            android:textColor="@color/mjc_grey"
            android:textSize="@dimen/text_size_14"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etAddWorkOwnerName"
            android:textColor="@color/mjc_grey"
            android:textSize="@dimen/text_size_18"
            tools:text="Kovoor"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:background="@drawable/field_bg_blue"
            android:gravity="center_vertical"
            android:padding="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_date_of_completion"
            android:textColor="@color/mjc_grey"
            android:textSize="@dimen/text_size_14"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etAddWorkDateOfCompletion"
            android:textColor="@color/mjc_grey"
            android:textSize="@dimen/text_size_18"
            tools:text="Kovoor"
            android:drawableTint="@color/mjc_blue"
            android:maxLines="1"
            android:drawableRight="@drawable/ic_round_date"
            android:layout_marginTop="5dp"
            android:background="@drawable/field_bg_blue"
            android:gravity="center_vertical"
            android:padding="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_description"
            android:textColor="@color/mjc_grey"
            android:textSize="@dimen/text_size_14"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:id="@+id/etAddWorkDescription"
            android:textColor="@color/mjc_grey"
            android:textSize="@dimen/text_size_18"
            tools:text="Kovoor"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:background="@drawable/field_bg_blue"
            android:gravity="top"
            android:padding="10dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_14"
        android:text="@string/text_add_work_photo"
        />
        <ImageView
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:id="@+id/ivAddPhoto"
            android:background="@drawable/field_bg_grey"
            android:src="@drawable/ic_round_add"
            app:tint="@color/mjc_blue"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_addWorkPhoto"
        />
    <TextView
        android:id="@+id/btSaveWork"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_default"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bg_blue"
        android:gravity="center"
        android:visibility="visible"
        android:text="@string/text_save"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>