<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".consumer.requirements.RequirementActivity">
    <include
        android:id="@+id/toolbar_requirement"
        layout="@layout/main_toolbar"
       />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:text="@string/text_add_requirement"
            android:textColor="@color/mjc_grey">

        </TextView>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size_16"
            android:text="@string/text_upload_plan"
            android:textColor="@color/mjc_grey"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frame_file_list"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="20dp"
            />
    <!--<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_plan_view"
        android:id="@+id/llUploadPlan"
        android:orientation="vertical"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:background="@drawable/field_bg_blue"
        >

        <ImageView
            android:id="@+id/ivPlanHolder"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_plan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivPlan"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPlan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUploadText"
            android:drawableTint="@color/mjc_grey"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableEnd="@drawable/ic_upload"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:text="@string/text_upload_plan"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_size_16"
                android:text="@string/text_add_measurement"
                android:textColor="@color/mjc_grey"/>
            <EditText
                android:id="@+id/tvMeasureTotalArea"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_text_field_default"
                android:layout_marginTop="20dp"
                android:background="@drawable/field_bg_blue"
                android:gravity="center_vertical"
                android:hint="@string/text_total_area"
                android:inputType="numberDecimal"
                android:padding="@dimen/padding_text_view"
                android:textSize="@dimen/text_size_18"/>
            <EditText
                android:id="@+id/tvMeasureBuildingArea"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_text_field_default"
                android:layout_marginTop="20dp"
                android:background="@drawable/field_bg_blue"
                android:gravity="center_vertical"
                android:hint="@string/text_building_area"
                android:inputType="numberDecimal"
                android:padding="@dimen/padding_text_view"
                android:textSize="@dimen/text_size_18"/>
            <TextView
                android:id="@+id/btContinueRequirement"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button_default"
                android:layout_marginTop="80dp"
                android:background="@drawable/button_bg_blue"
                android:textColor="@color/white"
                android:text="@string/text_continue"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>